# rat_king_parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  rat_king_parser.py  requirements.txt
.github/workflows/: ci.yml  precommit.yml  publish.yml
config_parser/: __init__.py  rat_config_parser.py
config_parser/utils/: config_aes_decryptor.py  config_item.py  data_utils.py  dotnet_constants.py  dotnetpe_payload.py
config_parser/utils/decryptors/: config_decryptor_aes_cbc.py  config_decryptor_aes_ecb.py
src/rat_king_parser/: __init__.py  _version.py  rkp.py
src/rat_king_parser/config_parser/: __init__.py  rat_config_parser.py
src/rat_king_parser/config_parser/utils/: config_item.py  config_normalization.py  data_utils.py  dotnetpe_payload.py
src/rat_king_parser/config_parser/utils/decryptors/: __init__.py  config_decryptor_aes.py  config_decryptor_aes_cbc.py  config_decryptor_aes_efb.py  config_decryptor_aes_with_iv.py  config_decryptor_aes_with_iv_bpkdf2.py  config_decryptor_aes_with_iv_pbkdf.py  config_decryptor_aes_with_iv_pbkdf2.py  config_decryptor_ecb.py  config_decryptor_plaintext.py  config_decryptor_random_hardcoded.py  config_decryptor_rijndael.py
src/rat_king_parser/yara_utils/: __init__.py  recompile.py  rules.yar  rules.yarc
tests/: test_known_samples.py
yara_rules/: recompile.py  rules.yar  rules.yarc
